@@ -71,7 +71,7 @@ AWK = gawk
 CC = gcc
 CURL_CFLAGS = 
 CURL_CONFIG = /usr/bin/curl-config
-CURL_LIBS =  -lcurl  -lssl -lcrypto -ldl
+CURL_LIBS = -lssl -lcrypto -ldl
 CXX = g++
 DEPDIR = .deps
 DLLTOOL = @DLLTOOL@
